# Weekly-arXiv-ML-AI-Research-Review

./: .gitignore  README.md  atlas-wrapper.html  index-en.html  index.html  index.json  index_en.html  pixel-demo.html  platform_кesearch.md  replace-secrets.txt  test-i18n.html  test-main-i18n.html
ATLAS/: README.md  _config.yml  _toc.yml  build.sh  index.md  rebuild.sh  requirements.txt
agents-under-hood/: README.md
agents-under-hood/Google-Agent-Development-Kit/: .env.example  .gitignore  CookBook.ipynb  QUICK_START.md  README.md  SETUP.md  pyproject.toml  requirements.txt  review.md  setup.sh  test_agent.py  test_fixes.py  test_frontend_fix.html
agents-under-hood/Google-Agent-Development-Kit/.gemini/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
agents-under-hood/Google-Agent-Development-Kit/src/: main.py
agents-under-hood/Google-Agent-Development-Kit/src/agents/: assistant_agent.py  commit_agent.py  git_agent.py
agents-under-hood/Google-Agent-Development-Kit/src/ai_git_assistant/: main.py
agents-under-hood/Google-Agent-Development-Kit/src/ai_git_assistant/agents/: assistant_agent.py
agents-under-hood/Google-Agent-Development-Kit/src/git_workflow_agent/: __init__.py  agent.py  config.py
agents-under-hood/Google-Agent-Development-Kit/src/utils/: __init__.py  file_utils.py  git_utils.py
agents-under-hood/Google-Agent-Development-Kit/ui/: next.config.mjs  package-lock.json  package.json
agents-under-hood/Google-Agent-Development-Kit/ui/app/: layout.tsx  page.tsx
docs/: README-en.md
(+401 files in other folders)
